--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,7 +5,7 @@ name: Schedule-cronjob-deploy
 
 on:
   schedule:
-    - cron: "15 1 * * *"
+    - cron: "0 2 * * *"
   workflow_dispatch:
 env:
   MAIL_USER_EMAIL: ${{ secrets.MAIL_USER_EMAIL}}
@@ -19,7 +19,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x, 18.x]
+        node-version: [18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
